weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Jul 5, 2022</p>
+                            <p>Jul 11, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,17 +294,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年6月27日~7月4日一周（八日）疫情简报：
+                                <p>2022年7月4日~10日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有下降（降低9%），病例总数超过152万例，平均每日增长1277例（上周为1405例）；累计死亡13150人，最近一周新增死亡33人（上周为17人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1738）、戴恩郡Madison（+1509）、沃基肖郡Waukesha（+629）、布朗郡Green Bay（+422）、Rock郡（+254）、Marathon郡（+242）、拉辛郡Racine（+241）、Winnebago郡（+239）、Kenosha郡（+226）、Washington郡（+204）、Outagamie郡（+201）、Sheboygan郡（+191）、La Crosse郡（+189）、Fond du Lac郡（+156），其他郡一周新增人数在130人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有下降（降低3%），病例总数超过153万例，平均每日增长1315例（上周为1277例）；累计死亡13167人，最近一周新增死亡17人（上周为33人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1680）、戴恩郡Madison（+1440）、沃基肖郡Waukesha（+559）、布朗郡Green Bay（+403）、Winnebago郡（+257）、Marathon郡（+242）、拉辛郡Racine（+239）、La Crosse郡（+225）、Kenosha郡（+208）、Rock郡（+204）、Outagamie郡（+197）、Washington郡（+179）、Fond du Lac郡（+156）、Sheboygan郡（+148）、Ozaukee郡（+137）、Wood郡（+129），其他郡一周新增人数在120人以下。
                                     
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低13%），目前病例总数为143033例，周内新增1512例，平均每日增长216例（上周为249例），一周平均检测阳性率为14.1%（稍高于上周的14.0%）。戴恩郡新冠住院病人数目由54人升至73人；重症病房新冠病人数目在10人上下波动；累计死亡493例，新增3例（上周无新增）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所上升（升高35%），目前病例总数为144412例，周内新增2047例，平均每日增长292例（上周为216例），一周平均检测阳性率为15.2%（稍高于上周的14.1%）。戴恩郡新冠住院病人数目由73人降至60人；重症病房新冠病人数目由10人降至7人；累计死亡495例，新增2例（上周为3例）。
 
-                                    <br><br>—  截止到7月1日（近日未更新），戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.5%；完成接种疫苗者超过43.7万人，占总人口的79.2%；完成接种加强针者占63.8%。
+                                    <br><br>—  截止到7月7日（近日未更新），戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.5%；完成接种疫苗者超过43.7万人，占总人口的79.3%；完成接种加强针者占63.8%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：MSN机场附近、Beltline高速西段（252至254号口）以西至Pope Farm Park以东的大片地区、Lake Monona西北岸（Washington东南）附近地区、Univ Ave与Mineral Point Rd之间部分区域（Quarry Park、Hoyt Park附近）、I-39高速东侧部分地区、戴恩郡北部的Waunakee北部地区等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：E Washington Ave与I-39路口以南（Commercial Ave以北、Sycamore Park附近）、威州议会大厦东侧与北侧（N Blair St西南）、戴恩郡南部的Oregon市西侧、Lake Monona西南岸（Goodman Park附近）、Camp Randall橄榄球场西南（Edgewood College北侧）等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性81例（稍高于上周的77例），一周检测阳性率为13.9%（稍高于上周的13.7%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性62例（低于上周的81例），一周检测阳性率为12.4%（稍低于上周的13.9%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
