--- a/global/category.html
+++ b/global/category.html
@@ -475,7 +475,188 @@
                             </div>
                         </div>
 
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">塞尔维亚总统武契奇宣誓就职</h4>
+                                <p class="gazette-post-date">2022年5月31日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/MAY31_serbia.jpg" style="max-height: 250px; width: auto;"
+                                        alt="塞尔维亚总统武契奇宣誓就职">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>塞尔维亚总统武契奇31日在首都贝尔格莱德国民议会大厦宣誓就职，开始他的第二个总统任期。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="MAY31_serbia.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">俄亥俄州一名警察射杀非裔美国人</h4>
+                                <p class="gazette-post-date">2022年7月4日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/JUL04_Ohio_Police.png" style="max-height: 250px; width: auto;"
+                                        alt="俄亥俄州一名警察射杀非裔美国人">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>近日，又一起警察射杀非裔美国人事件引发民愤，并有可能导致骚乱。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="JUL04_Ohio_Police.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">芝加哥Highland Park发生大规模枪击案</h4>
+                                <p class="gazette-post-date">2022年7月4日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/JUL04_Highlandpark_Shooting.jpg" style="max-height: 250px; width: auto;"
+                                        alt="芝加哥Highland Park发生大规模枪击案">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>美国中部时间今日，芝加哥Highland Park发生大规模枪击案，致死7人，伤46人。枪手Robert "Bobby" E. Crimo III已经向警察投降自首。目击者称，起初人们认为枪声是庆祝独立日游行的一部分。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="JUL04_HighlandPark_Shooting.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">拜登下令降半旗悼念安倍</h4>
+                                <p class="gazette-post-date">2022年7月8日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/JUL08_Abe.jpg" style="max-height: 250px; width: auto;"
+                                        alt="拜登下令降半旗悼念安倍">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>美国总统拜登当地时间8日表示，他已下令美国降半旗以悼念日本前首相安倍晋三。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="JUL08_Abe_Assassination.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">斯里兰卡总统表示将于本月13日辞职</h4>
+                                <p class="gazette-post-date">2022年7月10日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/JUL10_Sri_Lankan_President_resign.jpg" style="max-height: 250px; width: auto;"
+                                        alt="斯里兰卡总统表示将于本月13日辞职">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>斯里兰卡议长办公室9日晚证实，斯总统戈塔巴雅·拉贾帕克萨已告知议长阿贝瓦德纳，他将于本月13日辞职。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="JUL10_Sri_Lanka_President_resign.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">斯里兰卡总统乘军用飞机逃离国家</h4>
+                                <p class="gazette-post-date">2022年7月13日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/JUL10_Sri_Lankan_President.jpg" style="max-height: 250px; width: auto;"
+                                        alt="斯里兰卡总统乘军用飞机逃离国家">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>斯里兰卡因经济危机爆发民众示威之际，总统戈塔巴雅·拉贾帕克萨（Gotabaya Rajapaksa）乘坐军用飞机逃离了国家。该国空军确认，73岁的拉贾帕克萨与夫人及两名安全官员一起飞往马尔代夫。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="JUL13_Sri_Lanka_President.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">朝鲜承认顿涅茨克和卢甘斯克独立</h4>
+                                <p class="gazette-post-date">2022年7月13日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/JUL13_NK_LDPR.jpg" style="max-height: 250px; width: auto;"
+                                        alt="朝鲜承认顿涅茨克和卢甘斯克独立">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>据塔斯社援引朝鲜驻俄使馆消息，当地时间13日上午，朝鲜驻俄罗斯大使申洪哲在朝鲜大使馆与顿涅茨克驻俄罗斯代表进行了会谈，并向她递交了一份朝鲜宣布承认顿涅茨克独立的文件。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="JUL13_NK_LDPR.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         
                         
 
