--- a/campus/category.html
+++ b/campus/category.html
@@ -265,6 +265,83 @@
 
 
 
+                    <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Campus</a>
+                              </div>
+                              <h4 class="font-pt">实地播报 | 麦迪逊学生自发组织游行反对亚裔歧视</h4>
+                              <p class="gazette-post-date">2022年6月18日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/protest/protest_img_1.jpeg" style="max-height: 250px; width: auto;">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>昨日6月17日下午，在麦迪逊，学生自发组织反对仇恨亚裔的游行。共有约300个人参加了游行，其中以亚洲人为主，也不乏其他族裔。游行的起点在麦迪逊市政府大楼，终点在Library Mall。抗议持续了约一个半小时。</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="protest.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+                    <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Campus</a>
+                              </div>
+                              <h4 class="font-pt">发声｜‘我在麦迪逊被人故意开车撞，被送进ICU，至今无法正常生活’</h4>
+                              <p class="gazette-post-date">2022年6月16日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/fasheng/fasheng_img_2.jpeg" style="max-height: 250px; width: auto;">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>在昨日我校周同学遇袭的事件被报道后，我们又得知了许多发生在身边的恶意袭击事件，每一件都让我们心痛。其中，发生在W女士身上的惨剧刷新了我们对恶的认知。</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="fasheng.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+
+
+                    <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Campus</a>
+                              </div>
+                              <h4 class="font-pt">我校中国留学生昨晚遭遇群体袭击，导致头部受伤流血；部分同学已经成立抗议微信群</h4>
+                              <p class="gazette-post-date">2022年6月15日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/assault/assault_img_3.png" style="max-height: 250px; width: auto;">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>来Madison读博五年了，当时选择Madison很大一部分原因也是因为这里相对于美国其他地方治安已经是很好了，因为安全问题我甚至没有申请加州/纽约/南部 任何一所学校。我选择的住所也是整个Madison几乎最繁华的地方。但今晚不管是种族仇恨还是更加常见的校园暴力，还是降临到我头上了。</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="assault.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
                       <div class="col-12 col-md-4">
                           <!-- Gazette Welcome Post -->
                           <div class="gazette-welcome-post">
