--- a/tech/category.html
+++ b/tech/category.html
@@ -263,6 +263,38 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
 
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Tech</a>
+                                </div>
+                                <h4 class="font-pt">一项新研究使研究人员能够更有效地从干细胞中形成人类心脏细胞</h4>
+                                <p class="gazette-post-date">2022年7月4日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/cell/cell_img_1.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>实验室培养的人类心脏细胞为治疗心脏疾病提供了巨大参考价值。然而，从多能干细胞产生人类心脏细胞的方法并不理想。幸运的是，威斯康星大学麦迪逊分校干细胞和再生医学中心的一项新研究提供了关键的见解，将帮助研究人员从干细胞中培育心脏细胞。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="cell.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
                             <div class="gazette-welcome-post">
