--- a/campus/category.html
+++ b/campus/category.html
@@ -264,6 +264,61 @@
 
 
 
+
+                        <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Campus</a>
+                              </div>
+                              <h4 class="font-pt">威大下学年国际学生医保性价比降低，自费部分最多上涨150%</h4>
+                              <p class="gazette-post-date">2022年7月16日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/ship/ship_img_0.png" style="max-height: 250px; width: auto;">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>7月7日，2022-2023学年的SHIP医保价格和覆盖范围正式公布。除了价格从去年的$1476上涨到$1656外，各位在享受医疗服务时的自费部分也有不同程度的增加。上图为权益和价格明细。
+</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="ship.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+                        <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Campus</a>
+                              </div>
+                              <h4 class="font-pt">威大前校长布兰克公布癌症诊断结果，并选择辞去西北大学候任总统职务</h4>
+                              <p class="gazette-post-date">2022年7月11日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/becky/becky_img_1.png" style="max-height: 250px; width: auto;">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>7 月 11 日，Rebecca M. Blank 在给社区的消息中宣布，她被诊断出患有侵袭性癌症，将无法履行西北大学第 17 任校长的职责。 
+
+她计划在接下来的时间里专注于她的健康和家庭。 
+</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="becky.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
                     <div class="col-12 col-md-4">
                           <!-- Gazette Welcome Post -->
                           <div class="gazette-welcome-post">
