--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Jul 11, 2022</p>
+                            <p>Jul 18, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,17 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年7月4日~10日一周疫情简报：
+                                <p>2022年7月11日~17日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有下降（降低3%），病例总数超过153万例，平均每日增长1315例（上周为1277例）；累计死亡13167人，最近一周新增死亡17人（上周为33人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1680）、戴恩郡Madison（+1440）、沃基肖郡Waukesha（+559）、布朗郡Green Bay（+403）、Winnebago郡（+257）、Marathon郡（+242）、拉辛郡Racine（+239）、La Crosse郡（+225）、Kenosha郡（+208）、Rock郡（+204）、Outagamie郡（+197）、Washington郡（+179）、Fond du Lac郡（+156）、Sheboygan郡（+148）、Ozaukee郡（+137）、Wood郡（+129），其他郡一周新增人数在120人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所上升（升高22%），病例总数超过154万例，平均每日增长1608例（上周为1315例）；累计死亡13184人，最近一周新增死亡17人（上周为17人）。
                                     
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所上升（升高35%），目前病例总数为144412例，周内新增2047例，平均每日增长292例（上周为216例），一周平均检测阳性率为15.2%（稍高于上周的14.1%）。戴恩郡新冠住院病人数目由73人降至60人；重症病房新冠病人数目由10人降至7人；累计死亡495例，新增2例（上周为3例）。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2105）、戴恩郡Madison（+1622）、沃基肖郡Waukesha（+654）、布朗郡Green Bay（+466）、Rock郡（+346）、Winnebago郡（+320）、拉辛郡Racine（+315）、Outagamie郡（+313）、Kenosha郡（+304）、Marathon郡（+264）、La Crosse郡（+258）、Sheboygan郡（+227）、Washington郡（+215）、Fond du Lac郡（+204）、Eau Claire郡（+200）、Wood郡（+192）、Walworth郡（+166）、Portage郡（+162）、Jefferson郡（+161）、St. Croix郡（+154）、Manitowoc郡（+151），其他郡一周新增人数在130人以下。
 
-                                    <br><br>—  截止到7月7日（近日未更新），戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.5%；完成接种疫苗者超过43.7万人，占总人口的79.3%；完成接种加强针者占63.8%。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低21%），目前病例总数为146029例，周内新增1617例，平均每日增长231例（上周为292例），一周平均检测阳性率为14.3%（稍低于上周的15.2%）。戴恩郡新冠住院病人数目由60人升至70人；重症病房新冠病人数目由7人降至6人；累计死亡497例，新增2例（上周为2例）。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：E Washington Ave与I-39路口以南（Commercial Ave以北、Sycamore Park附近）、威州议会大厦东侧与北侧（N Blair St西南）、戴恩郡南部的Oregon市西侧、Lake Monona西南岸（Goodman Park附近）、Camp Randall橄榄球场西南（Edgewood College北侧）等，详情请查看所附地图。
+                                    <br><br>—  截止到7月17日，戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.5%；完成接种疫苗者超过43.8万人，占总人口的79.3%；完成接种加强针者占63.8%。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性62例（低于上周的81例），一周检测阳性率为12.4%（稍低于上周的13.9%）。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：戴恩郡东南边界附近（靠近Edgerton与Lake Koshkonong）、MSN机场附近、Beltline高速以东的Old Sauk Rd北侧（至Strickner's Park与铁路）、Beltline高速西南侧至County Road M与Mid Town Rd、MSN机场东侧至I-39高速、Lake Monona东北岸至I-39高速、Westmorland Community Park附近等，详情请查看所附地图。
+
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性72例（高于上周的62例），一周检测阳性率为13.1%（稍高于上周的12.4%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
